src/scss/global.scss
/* ... */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

// Titles
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  margin-bottom: 0.5rem;
  line-height: 1.2;
  &.primary {
    color: $primary;
  }
  &.italic {
    font-weight: 900;
    font-style: italic;
  }
}
h1 {
  font-size: 3em;
}
h2 {
  font-size: 2em;
}
h3 {
  font-size: 1.6em;
}
h4 {
  font-size: 1.4em;
}
h5 {
  font-size: 1.2em;
}
h6 {
  font-size: 1em;
}

// Buttons
button.btn,
a.btn,
input.btn {
  display: inline-block;
  padding: 12px 16px;
  font-weight: 700;
  text-decoration: none;
  border-radius: 22px;
  text-align: center;
  font-size: 1em;

  background-color: rgba($primary, 0.24);
  transition: all 400ms $transition-function;
  color: $white;
  transform: translateY(0);

  &:hover {
    transform: translateY(-1px);
    background-color: rgba($primary, 0.18);
  }
  &.btn-primary {
    color: $white;
    background-image: $gradient;
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.21);
    &:hover {
      background-color: darken($primary, 14%);
    }
  }
  &.btn-secondary {
    color: $white;
    background-color: rgba(124, 70, 251, 0.4);
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.21);
    &:hover {
      background-color: rgba(124, 70, 251, 0.8);
    }
  }
  &.btn-danger {
    color: $white;
    background: $danger-gradient;
    border-color: rgba(0, 0, 0, 0);
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.21);
    &:hover {
      background-color: darken($red, 14%);
    }
  }

  &.btn-small {
    padding: 6px 12px;
    font-size: 0.9em;
  }
  &.btn-block {
    display: block;
    max-width: 275px;
    margin-bottom: 0.8rem;
  }
  &.btn-centered {
    margin-left: auto;
    margin-right: auto;
  }
  &.disabled,
  &[type="submit"]:disabled {
    color: rgba($white, 0.5);
    background-color: rgba($white, 0.15);
    &.btn-primary {
      color: rgba($white, 0.5);
      background-image: none;
      background-color: rgba($white, 0.15);
    }
  }
}

.input-error {
  color: red;
}

button.btn {
  font-weight: 700;
  text-decoration: none;
  color: rgba(0, 0, 0, 0.7);
  display: inline-block;
  font-weight: 700;
  text-decoration: none;
  border-radius: 22px;
  text-align: center;
  font-size: 1em;

  background-color: $primaryColor;
  transition: all 400ms $transition-function;
  color: $black;
  transform: translateY(0);

  &:hover:enabled {
    transform: translateY(-1px);
    background-image: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.4) 0%,
      rgba(0, 0, 0, 0.4) 100%
    );
  }

  &.btn-block {
    display: block;
    max-width: 275px;
    margin-bottom: 0.8rem;
  }

  &.btn-centered {
    margin-left: auto;
    margin-right: auto;
  }

  &.btn-primary {
    // Background image has to be set to 'none' because by default the Button has gradient image
    background-image: none;
    background-color: $primary;

    &:hover {
      background-image: none;
      background-color: $primary--darker;
    }
  }

  &.btn-secondary {
    // Background image has to be set to 'none' because by default the Button has gradient image
    background-color: $secondary--light;

    &:hover {
      background-image: none;
      background-color: $secondary;
    }
  }

  &.disabled {
    color: rgba($white, 0.2);
    background-image: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.2) 0%,
      rgba(0, 0, 0, 0.2) 100%
    );
  }
}

// Inputs
input,
textarea {
  // @debt remove style auto-setting for inputs
  -webkit-appearance: none;
  border: none;
  outline: none;
  background-color: rgba($white, 0.12);
  width: 100%;
  position: relative;
  cursor: pointer;
  font-size: 1em;
  padding: 12px;
  border-radius: 22px;
  text-align: center;
  color: $white;

  &:-webkit-autofill,
  &:-webkit-autofill:hover,
  &:-webkit-autofill:active,
  &:-webkit-autofill:focus {
    background-color: rgba(white, 0) !important;
  }
  &:hover {
    background-color: rgba($white, 0.16);
  }
  &:focus {
    box-shadow: 0 0 0 2px rgba($white, 1);
  }
  &[type="checkbox"]:focus {
    box-shadow: unset;
  }
  &.input-block {
    display: block;
    max-width: 275px;
    margin-bottom: 0.8rem;
  }
  &.wide-input-block {
    display: block;
    margin-bottom: 0.8rem;
  }
  &.align-left {
    text-align: left;
  }
  &.input-centered {
    margin-left: auto;
    margin-right: auto;
  }
  &.btn {
    font-weight: 700;
  }
  &.disabled {
    background-color: rgba($concrete, 1);
    cursor: default;
  }
}

textarea {
  resize: none;
  font-family: inherit;
  font-size: inherit;
  height: 100px;
}

.input-group {
  display: flex;
  flex-direction: column;
  margin-bottom: 0.8rem;

  input.input-block {
    margin-bottom: 0.3rem;
  }
  .input-info {
    font-size: 0.8em;
    opacity: 0.8;
    align-self: center;
  }
  &.input-info {
    align-self: center;
  }
  .input-error {
    text-align: center;
    color: #e30b0b;
    font-size: 0.9em;
    font-weight: bold;
  }
}

.announcement-list,
.chat-list {
  height: 200px;
  overflow: auto;
}

.profile-icon {
  border-radius: 50%;
  margin: 1px;
  cursor: pointer;
  object-fit: contain;
}

.room-attendance {
  cursor: pointer;
  border-radius: 10px;
  padding: $spacer * 0.25 $spacer * 0.75;
  background: $black;
  color: $white;

  &.positioned {
    position: absolute;
    opacity: 0.5;
    background: $white;
    color: $black;
  }

  .icon {
    border-radius: 10px 0 0 10px;
    padding: $spacer * 0.25 $spacer * 0.75;
    background: theme-color("primary");
  }

  .attendance-number {
    margin-right: 10px;
  }
}

a,
.button--a {
  color: $white;
  text-decoration: underline;

  &:hover {
    color: $primaryColor;
  }
}

.button--a {
  background: transparent;
  border: none;
}

h4 {
  font-weight: bold;
  font-size: 17px;
}

.title {
  font-style: italic;
  font-weight: 700;
}

.collective-icon {
  border-radius: 50%;
  margin-right: 10px;
}

.sparkle-navbar-icon {
  width: 300px;
}

.primary {
  color: $primaryColor;
}
/* ... */

